--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Phiếu Lương Kế Toán</title>
   <style>
     body {
       margin: 0;
